Closed
Bug 512110
Opened 16 years ago
Closed 16 years ago
Per-folder filters on newsgroups cannot be edited
Categories
(MailNews Core :: Filters, defect)
MailNews Core
Filters
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 3.0b4
People
(Reporter: rkent, Assigned: rkent)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
1.81 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
As a regression from bug 464770, per-folder filters for newsgroups cannot be edited. The displayed filter is always the server filter.
Flags: blocking-thunderbird3?
| Assignee | ||
Comment 1•16 years ago
|
||
The issue was that we did not override the default getEditableFilterList functions in news, so that the per-folder features got added.
I also did a little change that shows up once this is fixed. In filterWidgets.xml, if you select a news-based per-folder filter in the filterlist dialog, and then try to change the selection to the server for that folder, the displayed selection does not change in the menu. This is because selectedIndex does not change in the menu, so the XBL for that figures that it does not have to update the label. But we are using a non-standard method of changing the label to be a mismatch to the selected index, so we have to restore it to the correct value. This might have manifestations elsewhere, but I could not find any.
Attachment #396110 -
Flags: superreview?(bienvenu)
Attachment #396110 -
Flags: review?(bienvenu)
| Assignee | ||
Updated•16 years ago
|
Whiteboard: [needs r/sr bienvenu]
Updated•16 years ago
|
Attachment #396110 -
Flags: superreview?(bienvenu)
Attachment #396110 -
Flags: superreview+
Attachment #396110 -
Flags: review?(bienvenu)
Attachment #396110 -
Flags: review+
Updated•16 years ago
|
Flags: blocking-thunderbird3? → blocking-thunderbird3+
Keywords: checkin-needed,
regression
Whiteboard: [needs r/sr bienvenu]
Comment 2•16 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•