Bug 512110 - "Per-folder filters on newsgroups cannot be edited" [r+sr=bienvenu]